tests/snapshots/run_wpt_conformance__coreml_clamp_float16_3D_tensor_default_options_maxValue_and_specified_options_minValue_0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 3D tensor default options.maxValue and specified options.minValue=0.0",
    "coreml",
    "PASS",
)
