tests/snapshots/run_wpt_conformance__coreml_clamp_float16_4D_tensor_specified_negative_options_minValue_and_options_maxValue_0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 4D tensor specified negative options.minValue and options.maxValue=0.0",
    "coreml",
    "PASS",
)
